--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body ng-app="starter">
-<ion-nav-view></ion-nav-view>
+<body ng-app="stadsbild">
+  <ion-nav-view></ion-nav-view>
 </body>
 </html>
