--- a/www/index.html
+++ b/www/index.html
@@ -17,12 +17,11 @@
   <script src="lib/ng-cordova.min.js"></script>
   <script src="cordova.js"></script>
 
-  <script src="js/app.js"></script>
-  <script src="js/controllers/appController.js"></script>
-  <script src="js/controllers/mapController.js"></script>
+  <script src="stadsbild.js"></script>
+  <script src="map/map-ctrl.js"></script>
   <script src="js/services/locationsService.js"></script>
   <script src="js/services/instructionsService.js"></script>
-  <script src="js/directives/igTruncate.js"></script>
+  <script src="lib/igTruncate.js"></script>
 
 </head>
 
