Settings and about templates

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
 
   <script src="stadsbild.js"></script>
   <script src="map/map-ctrl.js"></script>
+  <script src="settings/settings-ctrl.js"></script>
   <script src="js/services/locationsService.js"></script>
   <script src="js/services/instructionsService.js"></script>
   <script src="lib/igTruncate.js"></script>
