Draft of map side menu

--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,9 @@
   <title>Leaflet Demo</title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/leaflet.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link href="css/leaflet.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
+  <link href="map/menu.css" rel="stylesheet" />
 
   <script src="lib/ionic/js/ionic.bundle.js"></script>
 
