Added location details view

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
   <script src="stadsbild.js"></script>
   <script src="map/map-ctrl.js"></script>
+  <script src="location/location-ctrl.js"></script>
   <script src="settings/settings-ctrl.js"></script>
   <script src="js/services/locationsService.js"></script>
   <script src="js/services/instructionsService.js"></script>
