--- a/www/map/index.tpl.html
+++ b/www/map/index.tpl.html
@@ -10,7 +10,7 @@
 
   <ion-content data-tap-disabled="true">
 
-    <leaflet defaults="map.defaults" center="map.center" markers="map.markers" ng-if="map"></leaflet>
+    <leaflet defaults="map.defaults" center="map.center" markers="map.markers" paths="map.paths" ng-if="map"></leaflet>
 
   </ion-content>
 
