Renamed location -> struggle

--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
 
   <script src="stadsbild.js"></script>
   <script src="map/map-ctrl.js"></script>
-  <script src="location/location-ctrl.js"></script>
+  <script src="struggle/struggle-ctrl.js"></script>
   <script src="settings/settings-ctrl.js"></script>
-  <script src="js/services/locationsService.js"></script>
-  <script src="js/services/instructionsService.js"></script>
+  <script src="services/struggleInformation-service.js"></script>
+  <script src="services/instructions-service.js"></script>
   <script src="lib/igTruncate.js"></script>
 
 </head>
