--- a/www/map/menu.tpl.html
+++ b/www/map/menu.tpl.html
@@ -24,9 +24,9 @@
         </div>
 
         <div class="item item-button-right"
-           ng-repeat="(locationKey,location) in locations track by location.name">
-          <a ng-href="#/location/{{location.id}}" class="menu-close"> {{location.name}}</a>
-          <button class="button button-clear button-dark menu-close" ng-click="goTo(locationKey)">
+           ng-repeat="(struggleKey,struggle) in struggles track by struggle.name">
+          <a ng-href="#/struggle/{{struggle.id}}" class="menu-close"> {{struggle.name}}</a>
+          <button class="button button-clear button-dark menu-close" ng-click="goTo(struggleKey)">
             <i class="icon ion-location"></i>
           </button>
         </div>
