--- a/www/struggle/struggle.tpl.html
+++ b/www/struggle/struggle.tpl.html
@@ -3,7 +3,7 @@
     <div class="list card">
 
       <div class="item">
-        <h2>{{location.name}}</h2>
+        <h2>{{struggle.name}}</h2>
         <p>subtitle (eg. date)</p>
       </div>
 
