Moved .css files

--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,8 @@
   <title>Leaflet Demo</title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-  <link href="css/leaflet.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="lib/leaflet/leaflet.css" rel="stylesheet" />
+  <link href="stadsbild.css" rel="stylesheet" />
   <link href="map/menu.css" rel="stylesheet" />
 
   <script src="lib/ionic/js/ionic.bundle.js"></script>
