Updated documentation fixing descriptions and licensed as GPLv3

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>Leaflet Demo</title>
+  <title>Stadsbild</title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="lib/leaflet/leaflet.css" rel="stylesheet" />
@@ -25,7 +25,6 @@
   <script src="services/struggleInformation-service.js"></script>
   <script src="services/instructions-service.js"></script>
   <script src="lib/igTruncate.js"></script>
-
 </head>
 
 <body ng-app="stadsbild">
