Created geofencing service with background tracking

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
   <script src="lib/leaflet/leaflet.js"></script>
   <script src="lib/leaflet/angular-leaflet-directive.min.js"></script>
 
-  <script src="lib/ng-cordova.min.js"></script>
+  <script src="lib/ngCordova/ng-cordova.min.js"></script>
   <script src="cordova.js"></script>
 
   <script src="stadsbild.js"></script>
@@ -24,6 +24,7 @@
   <script src="settings/settings-ctrl.js"></script>
   <script src="services/struggleInformation-service.js"></script>
   <script src="services/instructions-service.js"></script>
+  <script src="services/geofencing-service.js"></script>
   <script src="lib/igTruncate.js"></script>
 </head>
 
