Menu expand support

--- a/www/map/menu.tpl.html
+++ b/www/map/menu.tpl.html
@@ -20,10 +20,10 @@
 
         <div class="item item-divider item-icon-right">
           Platser
-          <i class="icon small-icon ion-plus"></i>
+          <i class="icon small-icon" ng-class="{'ion-plus': !menu.struggles.expanded, 'ion-minus': menu.struggles.expanded}" ng-click="menu.struggles.expanded = !menu.struggles.expanded"></i>
         </div>
 
-        <div class="item item-button-right"
+        <div class="item item-button-right" ng-show="menu.struggles.expanded"
            ng-repeat="(struggleKey,struggle) in struggles track by struggle.name">
           <a ng-href="#/struggle/{{struggle.id}}" class="menu-close"> {{struggle.name}}</a>
           <button class="button button-clear button-dark menu-close" ng-click="goTo(struggleKey)">
@@ -33,9 +33,10 @@
 
         <div class="item item-divider item-icon-right">
           Filter
-          <i class="icon small-icon ion-minus"></i>
+          <i class="icon small-icon ion-minus" ng-class="{'ion-plus': !menu.categories.expanded, 'ion-minus': menu.categories.expanded}" ng-click="menu.categories.expanded = !menu.categories.expanded"></i>
         </div>
 
+        <div ng-show="menu.categories.expanded">
         <div class="item item-icon-left item-icon-right">
           <i class="icon small-icon ion-speakerphone"></i>
           Nyheter
@@ -53,11 +54,14 @@
           Arbetarkamp
           <i class="icon small-icon ion-checkmark"></i>
         </div>
-
-        <div class="item item-divider">
-          Annat
         </div>
 
+        <div class="item item-divider item-icon-right">
+          Annat
+          <i class="icon small-icon ion-minus" ng-class="{'ion-plus': !menu.other.expanded, 'ion-minus': menu.other.expanded}" ng-click="menu.other.expanded = !menu.other.expanded"></i>
+        </div>
+
+        <div ng-show="menu.other.expanded">
         <a class="item item-icon-left"
            href="#/settings">
           <i class="icon small-icon ion-gear-b"></i>
@@ -69,7 +73,7 @@
           <i class="icon small-icon ion-ios7-information-outline"></i>
           About
         </a>
-
+        </div>
       </ion-list>
 
     </ion-content>
