--- a/www/map/menu.tpl.html
+++ b/www/map/menu.tpl.html
@@ -18,9 +18,9 @@
 
       <ion-list>
 
-        <div class="item item-divider item-icon-right">
+        <div class="item item-divider item-icon-right" ng-click="menu.struggles.expanded = !menu.struggles.expanded">
           Platser
-          <i class="icon small-icon" ng-class="{'ion-plus': !menu.struggles.expanded, 'ion-minus': menu.struggles.expanded}" ng-click="menu.struggles.expanded = !menu.struggles.expanded"></i>
+          <i class="icon small-icon" ng-class="{'ion-plus': !menu.struggles.expanded, 'ion-minus': menu.struggles.expanded}" ></i>
         </div>
 
         <div class="item item-button-right" ng-show="menu.struggles.expanded"
@@ -31,9 +31,9 @@
           </button>
         </div>
 
-        <div class="item item-divider item-icon-right">
+        <div class="item item-divider item-icon-right" ng-click="menu.categories.expanded = !menu.categories.expanded">
           Filter
-          <i class="icon small-icon ion-minus" ng-class="{'ion-plus': !menu.categories.expanded, 'ion-minus': menu.categories.expanded}" ng-click="menu.categories.expanded = !menu.categories.expanded"></i>
+          <i class="icon small-icon ion-minus" ng-class="{'ion-plus': !menu.categories.expanded, 'ion-minus': menu.categories.expanded}"></i>
         </div>
 
         <div ng-show="menu.categories.expanded">
@@ -56,9 +56,9 @@
         </div>
         </div>
 
-        <div class="item item-divider item-icon-right">
+        <div class="item item-divider item-icon-right" ng-click="menu.other.expanded = !menu.other.expanded">
           Annat
-          <i class="icon small-icon ion-minus" ng-class="{'ion-plus': !menu.other.expanded, 'ion-minus': menu.other.expanded}" ng-click="menu.other.expanded = !menu.other.expanded"></i>
+          <i class="icon small-icon ion-minus" ng-class="{'ion-plus': !menu.other.expanded, 'ion-minus': menu.other.expanded}"></i>
         </div>
 
         <div ng-show="menu.other.expanded">
