"Show on map" button

--- a/www/struggle/struggle.tpl.html
+++ b/www/struggle/struggle.tpl.html
@@ -29,7 +29,11 @@
       </div>
       
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#">
+        <a class="tab-item" ng-href="#">
+          <i class="icon ion-location"></i>
+          Show on map
+        </a>
+        <a class="tab-item" ng-href="#">
           <i class="icon ion-share"></i>
           Share
         </a>
