--- a/www/map/index.tpl.html
+++ b/www/map/index.tpl.html
@@ -1,17 +1,17 @@
-<ion-view title="Map">
+<ion-side-menus>
 
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
+  <ion-pane ion-side-menu-content>
 
-  <ion-nav-buttons side="right">
-    <button ng-click="locate();" class="button button-icon icon ion-pinpoint"></button>
-  </ion-nav-buttons>
+    <ion-nav-bar class="bar-positive nav-title-slide-ios7">
+      <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
+    </ion-nav-bar>
 
-  <ion-content data-tap-disabled="true">
+    <ion-nav-view name="mapView" animation="slide-left-right"></ion-nav-view>
 
-    <leaflet defaults="map.defaults" center="map.center" markers="map.markers" paths="map.paths" ng-if="map"></leaflet>
+  </ion-pane>
 
-  </ion-content>
+  <ion-side-menu side="left">
+    <ion-nav-view name="menuView"></ion-nav-view>
+  </ion-side-menu>
 
-</ion-view>
+</ion-side-menus>
