--- a/www/map/menu.tpl.html
+++ b/www/map/menu.tpl.html
@@ -1,20 +1,4 @@
-<ion-side-menus>
-
-  <ion-pane ion-side-menu-content>
-
-    <ion-nav-bar class="bar-positive nav-title-slide-ios7">
-      <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
-
-    </ion-nav-bar>
-
-    <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
-
-  </ion-pane>
-
-  <ion-side-menu side="left">
-
-
-    <ion-content>
+<ion-view>
 
       <ion-list>
 
@@ -73,8 +57,4 @@
         </div>
       </ion-list>
 
-    </ion-content>
-
-  </ion-side-menu>
-
-</ion-side-menus>
+    </ion-view>
