Moved map menu to separate controller

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
   <script src="stadsbild.js"></script>
   <script src="map/map-ctrl.js"></script>
+  <script src="map/menu-ctrl.js"></script>
   <script src="struggle/struggle-ctrl.js"></script>
   <script src="settings/settings-ctrl.js"></script>
   <script src="services/struggleInformation-service.js"></script>
