--- a/www/struggle/struggle.tpl.html
+++ b/www/struggle/struggle.tpl.html
@@ -29,7 +29,7 @@
       </div>
       
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" ng-href="#">
+        <a class="tab-item" ng-click="showOnMap()">
           <i class="icon ion-location"></i>
           Show on map
         </a>
