--- a/www/map/index.tpl.html
+++ b/www/map/index.tpl.html
@@ -2,9 +2,7 @@
 
   <ion-pane ion-side-menu-content>
 
-    <ion-nav-bar class="bar-positive nav-title-slide-ios7">
-      <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
-    </ion-nav-bar>
+    <ion-nav-bar class="bar-positive nav-title-slide-ios7"></ion-nav-bar>
 
     <ion-nav-view name="mapView" animation="slide-left-right"></ion-nav-view>
 
