Fixed side menu scroling

--- a/www/map/menu.tpl.html
+++ b/www/map/menu.tpl.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <ion-view>
+<ion-view>
+  <ion-content class="header-menu">
       <ion-list>
 
         <ion-item class="side-menu-separator item-icon-right"
@@ -76,5 +76,5 @@
 
       </ion-list>
 
-    </ion-view>
-</ion-content>
+  </ion-content>
+</ion-view>
